--- a/writings/talks/dh2025/dh2025_teaching_python.html
+++ b/writings/talks/dh2025/dh2025_teaching_python.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-07-08 Tue 10:33 -->
+<!-- 2025-07-09 Wed 10:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -196,133 +196,104 @@
 </head>
 <body>
 <div id="content" class="content">
-<div id="table-of-contents" role="doc-toc">
-<h2>Table of Contents</h2>
-<div id="text-table-of-contents" role="doc-toc">
-<ul>
-<li><a href="#org2811def">1. Chun, Wendy Hui Kyong. Discriminating Data : Correlation, Neighborhoods, and the New Politics of Recognition. Edited by Alex Barnett, The MIT Press, 2021.</a></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org2811def" class="outline-2">
-<h2 id="org2811def"><span class="section-number-2">1.</span> Chun, Wendy Hui Kyong. Discriminating Data : Correlation, Neighborhoods, and the New Politics of Recognition. Edited by Alex Barnett, The MIT Press, 2021.</h2>
-<div class="outline-text-2" id="text-1">
 <p>
-In engineering vs humanities, representation vs singularity.
+I'm going to talk about my experience teaching programming in the age
+of AI tools.
 </p>
 
 <p>
-"How can we treat machine learning systems and their predictions like
-those for global climate change. These models offer us the most
-probably future given past and current actions, not so that we will
-accept their predictions are inevitable, but rather so we will use
-them to help <i>change</i> the future." (26)
+At Pratt Institute, in New York City, I teach courses on programming
+with Python. Most recently, this summer, I taught an intermediate
+level course titled "How To Build A Bot", which was about learning how
+to automate processes with Python. For example, bots are applications
+that will interact with webpages in somehow autonomous ways, like
+downloading data from webpages, doing searches, or even posting (if
+its a social media site). Over the semester, which ended last Monday,
+students built "bots" for various tasks.
 </p>
 
 <p>
-"Cyberspace, as a reparative hallucination within a hallucination,
-enables dominant groups to dis-identify as opporessed, militant
-minorities through hopeful ignorance." (34).
+SLIDE
+<a href="https://github.com/aliceaviggiani/map-bot">https://github.com/aliceaviggiani/map-bot</a>
+<a href="https://github.com/jfung53/mensmagbot">https://github.com/jfung53/mensmagbot</a>
+<a href="https://github.com/sgutma59/OpenAlexBibliographyBot">https://github.com/sgutma59/OpenAlexBibliographyBot</a>
+<a href="https://github.com/petewise9/eBay_Scraper/">https://github.com/petewise9/eBay_Scraper/</a>
 </p>
 
 <p>
-Intersectionality vs neighborhoods: the difference is intention.
-</p>
-<ul class="org-ul">
-<li>"Cambridge Analytica perverted Crenshaw's method and sought to
-augment differences and exclusions, both real and perceived, based
-on values and 'personality traits,' within a racially homogenous
-space" (49).</li>
-<li>"'Communities' are being planned and constructed based on divisions
-and animosities" (49).</li>
-</ul>
-
-<p>
-On "potential history" (Ariella Aisha Azoulay) and critical fabulation
-(Saidiya Hartman):
-</p>
-<ul class="org-ul">
-<li>"Crucially, the potential for an antitotalitarian society lies not
-in the 'new,' which is linked to the terror of colonial progress&#x2013;to
-the emptying of worlds it renders 'new'" (79)</li>
-<li>'Potential history'&#x2026; 'rather than seeing people as historical
-'sources,' it enables us to to live with them as companions in a
-world that defies the strict separation of past, present, and
-future" (79).</li>
-<li>"although such fabulation can never find the story's voices, it
-enables us to see beyond numbers and sources" (79).</li>
-<li>"What potential might we find if we were to simply revist and
-reimagine what has been dismissed as 'training sets'?" (80).</li>
-</ul>
-
-<p>
-"Machine learning and predictive models as they currently exist can
-also resist reduction, but only if we treat the gaps between their
-results and our realities as spaces for political action, not errors
-to be fixed" (254).
+For example, one bot that checks ebay for new listings of particular
+pokemon cards; another that automatically downloads data from academic
+open access repositories based on research topics; another that posts
+images and provenance information of rare maps on instagram.
 </p>
 
 <p>
-Correlation
+All of these students came to my class with little to no experience
+with programming &#x2013; and they all built things that they wouldn't have
+been able to build two or three years ago. From starting almost at
+zero, they left the course with functional applications that did
+things in the world. They were able to do this for one reason: because
+they had access to free AI chatbots and agents.
 </p>
-<ul class="org-ul">
-<li>"models not only 'discover' the effects of discrimination; they also
-automate and perpetuate them for they exploit, rather than remedy,
-inequalities" (57).</li>
-</ul>
 
 <p>
-Homophily
+Of course, they used the technology in different ways.
 </p>
-<ul class="org-ul">
-<li>"network science reduces real-world phenomena into a series of
-'nodes' and 'edges,' which are, in turn, regenerated to reveal the
-causes of seemingly disparate behaviors, from friendships to
-financial crises. These 'discovered' relations are vast
-simplifications of vast simplifications, with each stage of network
-theory&#x2013;initial abstraction or representation, followed by
-mathematical modelling&#x2013;producing its own type of abstraction" (90-91).</li>
-<li>"tightrope between empiricism and modelling&#x2026; capture[s] data and
-dream[s] of making data capture unnecessary by creating models that
-perfectly mimic their object of study" (91).</li>
-<li>"What would happen if we treated these and other models as we do
-climate change models?&#x2026; not so we will fatalistically accept the
-future they predict, but rather so that we will do whatever is
-needed to prevent that future from occurring" (122).</li>
-</ul>
 
 <p>
-Algorithms
+What most of them found useful was the debugging capabilities. That
+these AI-powered coding tools could toubleshoot and fix their code. In
+that sense, errors that could take hours or days to resolve can be
+resolved in seconds. 
 </p>
-<ul class="org-ul">
-<li>"People are most predictable when they are most affectively charged" (24).</li>
-</ul>
 
 <p>
-Recognition
+Although that was also a double-edged sword. The suggested fixes
+didn't always work, and when they did work, they often led to more
+errors down the road, or to convoluted looking and functioning code
+that takes more steps than necessary to fix the problem.
 </p>
-<ul class="org-ul">
-<li>"they dis-identify as 'victims,' in order to both establish
-themselves as the 'real victims,' and to undermine the claims of
-social justice warriors" (217).</li>
-</ul>
 
 <p>
-Math concepts:
+One of my students, for example, who was totally new to programming,
+described his experience interacting with an AI bot as if he was
+trying to convince or guide it toward a specific conclusion. He would
+say things like "I'm trying to get it to understand", and "It's coming
+around slowly", and "I'm almost there, it just needs some more
+direction."
 </p>
-<ul class="org-ul">
-<li>correlation</li>
-<li>magnetic polarization</li>
-<li>principal component analysis</li>
-<li>bayes' theorem and inference</li>
-<li>linear discriminant analysis</li>
-</ul>
-</div>
-</div>
+
+<p>
+In my head, I got the image of trying to get the Hulk how to sew a
+button.
+</p>
+
+<p>
+SLIDE hulk sewing from black-forest-labs / FLUX.1-dev
+</p>
+
+<p>
+You have something super powerful, and you're trying to get it to
+perform a very specific task.
+</p>
+
+<p>
+Sure, this is can very useful. I don't think that debugging code for
+hours, for example, will make you a better programmer. As I told my
+students, I don't think I gained anything really valuable from my
+weekends spent obsessively researching errors online. That time could
+have been used on creating and writing, rather than fixing errors. 
+</p>
+
+<p>
+I want to say that maybe it's not great that everyone, even people who
+haven't learned or aren't interested in learning about programming,
+are all building things. Maybe having certain limits on what we can
+make is a good thing.</p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: fcalado</p>
-<p class="date">Created: 2025-07-08 Tue 10:33</p>
+<p class="date">Created: 2025-07-09 Wed 10:57</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
