draft 3 open data panel

--- a/writings/talks/dh2025/dh2025_teaching_python.html
+++ b/writings/talks/dh2025/dh2025_teaching_python.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-07-09 Wed 10:57 -->
+<!-- 2025-07-12 Sat 10:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -196,76 +196,77 @@
 </head>
 <body>
 <div id="content" class="content">
+<div id="table-of-contents" role="doc-toc">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents" role="doc-toc">
+<ul>
+<li><a href="#org3445fb8">1. "When Hacking Becomes Easy: Teaching Python In 2025"</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org3445fb8" class="outline-2">
+<h2 id="org3445fb8"><span class="section-number-2">1.</span> "When Hacking Becomes Easy: Teaching Python In 2025"</h2>
+<div class="outline-text-2" id="text-1">
 <p>
-I'm going to talk about my experience teaching programming in the age
-of AI tools.
+I'm going to talk about my experience teaching programming to students
+who all use AI tools.
 </p>
 
 <p>
-At Pratt Institute, in New York City, I teach courses on programming
-with Python. Most recently, this summer, I taught an intermediate
-level course titled "How To Build A Bot", which was about learning how
-to automate processes with Python. For example, bots are applications
-that will interact with webpages in somehow autonomous ways, like
-downloading data from webpages, doing searches, or even posting (if
-its a social media site). Over the semester, which ended last Monday,
-students built "bots" for various tasks.
+Most recently, this summer, I taught an intermediate level programming
+course titled "How To Build A Bot", which was about learning how to
+automate processes with the Python programming language. For those who
+don't know, bots are applications that interact with webpages in
+autonomous ways, like downloading data from webpages or posting to
+social media sites. Over the semester, which ended last Monday,
+students built various "bots" that did different things.
 </p>
 
 <p>
 SLIDE
 <a href="https://github.com/aliceaviggiani/map-bot">https://github.com/aliceaviggiani/map-bot</a>
-<a href="https://github.com/jfung53/mensmagbot">https://github.com/jfung53/mensmagbot</a>
-<a href="https://github.com/sgutma59/OpenAlexBibliographyBot">https://github.com/sgutma59/OpenAlexBibliographyBot</a>
 <a href="https://github.com/petewise9/eBay_Scraper/">https://github.com/petewise9/eBay_Scraper/</a>
 </p>
 
 <p>
-For example, one bot that checks ebay for new listings of particular
-pokemon cards; another that automatically downloads data from academic
-open access repositories based on research topics; another that posts
-images and provenance information of rare maps on instagram.
+For example, one bot checked ebay every day for new listings of
+particular pokemon cards, and saved those listings to a spreadsheet;
+another bot posted images and provenance information of rare maps on
+instagram.
 </p>
 
 <p>
-All of these students came to my class with little to no experience
-with programming &#x2013; and they all built things that they wouldn't have
-been able to build two or three years ago. From starting almost at
-zero, they left the course with functional applications that did
-things in the world. They were able to do this for one reason: because
-they had access to free AI chatbots and agents.
+What's impressive is that all of my students came to this class with
+little to no experience with programming&#x2014;and they all built things
+that they wouldn't have been able to build two or three years ago.
+From starting almost at zero, they left the course with functional
+applications that did things in the world. They were able to do this
+for one reason: because they had access to free AI tools.
 </p>
 
 <p>
-Of course, they used the technology in different ways.
-</p>
-
-<p>
-What most of them found useful was the debugging capabilities. That
-these AI-powered coding tools could toubleshoot and fix their code. In
-that sense, errors that could take hours or days to resolve can be
-resolved in seconds. 
+What most of them found useful was the debugging capabilities, the
+ability of AI-powered coding tools to toubleshoot and fix their code.
+In that sense, errors that would have previously taken hours or days
+to resolve could be resolved in seconds.
 </p>
 
 <p>
 Although that was also a double-edged sword. The suggested fixes
 didn't always work, and when they did work, they often led to more
-errors down the road, or to convoluted looking and functioning code
-that takes more steps than necessary to fix the problem.
+errors down the road, or to convoluted looking code that takes more
+steps than necessary to fix the problem.
 </p>
 
 <p>
-One of my students, for example, who was totally new to programming,
-described his experience interacting with an AI bot as if he was
-trying to convince or guide it toward a specific conclusion. He would
-say things like "I'm trying to get it to understand", and "It's coming
-around slowly", and "I'm almost there, it just needs some more
-direction."
+In a funny example, one of my students, who was totally new to
+programming, described his experience interacting with an AI bot as if
+he was trying to convince or guide it toward a specific conclusion. He
+would say things like, "It's coming around", and "Its almost there".
 </p>
 
 <p>
-In my head, I got the image of trying to get the Hulk how to sew a
-button.
+In my head, I got the image of the Hulk trying to sew a button.
 </p>
 
 <p>
@@ -273,27 +274,142 @@ SLIDE hulk sewing from black-forest-labs / FLUX.1-dev
 </p>
 
 <p>
-You have something super powerful, and you're trying to get it to
-perform a very specific task.
+You have something super powerful, and it's attempting to perform a
+very delicate task.
 </p>
 
 <p>
-Sure, this is can very useful. I don't think that debugging code for
-hours, for example, will make you a better programmer. As I told my
-students, I don't think I gained anything really valuable from my
-weekends spent obsessively researching errors online. That time could
-have been used on creating and writing, rather than fixing errors. 
+The good news is that this lowers the barrier of entry significantly.
+But I also want to say, perhaps controversially, that maybe it's not a
+great thing that programming is more accessible.
 </p>
 
 <p>
-I want to say that maybe it's not great that everyone, even people who
-haven't learned or aren't interested in learning about programming,
-are all building things. Maybe having certain limits on what we can
-make is a good thing.</p>
+Perhaps, people should be able toq build just anything with little to
+no prior understanding of programming. Not because they aren't
+genuinely interested in programming (though I think that is important)
+but because we should have some limits on what we can make. Creating
+should not be so easy.
+</p>
+
+<p>
+And the reason is that, even though programming applications exist on
+computer screens, operating seemingly independantly from material
+constraints, these things are very much tied to physical and sometimes
+distant components like hardware chips and data centers, as well as
+live, human components like data labelling and cleaning, and of
+course, content creation in the first place.
+</p>
+
+<p>
+And for every single one of those points that I just mentioned, AI
+companies are extracting value and labor without proper compensation.
+Not only that, where it concerns the physical materials, they are
+doing so to the effect of massive ecological harm. I'm not going to go
+into details, but in the global south, there are instances in Congo,
+Kenya, Thailand, and other places where water and earth is now toxic,
+creating health problems, destroying crops, and forcing the relocation
+of communities. And if people think this is limited to the global
+south, pay attention to what is going on in Tennessee right now, over
+the past several weeks, where Elon Musk has built a new (and
+unpermitted) data center.
+</p>
+
+<p>
+While there's a big stack of exploitation operating out of view from
+our screens, those who are in charge of the technology, who are
+leading these companies, seem to always speak about AI in terms of
+abundance. There are so many clips of Sam Altman going glassy eyed as
+he revels over the possibility that every human will have access to
+their own personalized "intelligence."
+</p>
+
+<pre class="example">
+Here's one example of the kind of language he uses: 
+
+If you think about how different the world can be, not only when every
+person has... ChatGPT... but next they have the world's best chief of
+staff. And then after that, every person has a company of 20 or 50
+experts that can work super well together. And then after that,
+everybody has a company of 10,000 experts in every field that can work
+super well together. And if someone wants to go focus on curing
+disease, they can do that. And if someone wants to focus on making
+great art, they can do that.   
+</pre>
+
+<p>
+To this prospect, I say no. We don't need "intelligence" to create
+things in order to have a world of abundance. We don't need it,
+because we have it already. The world is here, and it's abundant.
+</p>
+
+<p>
+What we actually need is to slow down and think about how to make that
+existing abundance accessible to the most amount of people possible.
+</p>
+
+<pre class="example">
+
+To demonstrate that idea, I'll end with a project from one of my
+students. This project uses AI tools to build something
+reflextive and analytical, rather than productive or profitable. 
+
+    SLIDE
+    https://github.com/jfung53/mensmagbot
+
+The project is an image generator generates a text snippet based on
+content about masculinity. Basically, it scrapes websites that are
+intended toward a male audience, like GQ and Mens' Health, and uses
+that dataset to train an AI model to generate text. She uses prompts
+like
+
+    SLIDE masculinity prompts
+
+Then, she uses prompts like ...
+
+#+begin_quote
+    "Men can be",
+    "Modern men are",
+    "Masculinity can be",
+    "Every man should",
+    "Any guy would",
+    "Real men",
+    "Male friendship is",
+    "Manhood is",
+    "Being a father means",
+    "Being a gentleman means"
+#+end_quote
+
+And she gets results like:
+
+SENTENCES
+
+I think work like this is super useful, especially considering the
+lack of attention masculinity by itself gets in cultural studies
+contexts.
+
+(For example, while there is "womens' studies", "queer studies",
+"asian studies", "black studies", there is no "mens studies". And
+although some people might scoff and say most fields implicitly
+center mens' perspectives, and while that may be true, that is all
+the more reason why mens' studies should can examine this in
+isolation). 
+
+Coming back to this project --- this is an example that doesn't
+build just to produce, but builds for the sake of being analytical.
+It adds a new kind of knowledge to the world, not just another
+product or tool.
+
+</pre>
+<p>
+Thank you.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: fcalado</p>
-<p class="date">Created: 2025-07-09 Wed 10:57</p>
+<p class="date">Created: 2025-07-12 Sat 10:49</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
