adding diss workbook

--- a/writings/notecards.html
+++ b/writings/notecards.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-07-08 Tue 10:33 -->
+<!-- 2025-10-01 Wed 14:18 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -200,129 +200,183 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2811def">1. Chun, Wendy Hui Kyong. Discriminating Data : Correlation, Neighborhoods, and the New Politics of Recognition. Edited by Alex Barnett, The MIT Press, 2021.</a></li>
+<li><a href="#org0535f80">1. <span class="todo TODO">TODO</span> Prosser, Jay. <i>Second Skins: The Body Narratives of Trannsexuality</i>, Columbia U Press, 1998.</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2811def" class="outline-2">
-<h2 id="org2811def"><span class="section-number-2">1.</span> Chun, Wendy Hui Kyong. Discriminating Data : Correlation, Neighborhoods, and the New Politics of Recognition. Edited by Alex Barnett, The MIT Press, 2021.</h2>
+<div id="outline-container-org0535f80" class="outline-2">
+<h2 id="org0535f80"><span class="section-number-2">1.</span> <span class="todo TODO">TODO</span> Prosser, Jay. <i>Second Skins: The Body Narratives of Trannsexuality</i>, Columbia U Press, 1998.</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-In engineering vs humanities, representation vs singularity.
-</p>
-
-<p>
-"How can we treat machine learning systems and their predictions like
-those for global climate change. These models offer us the most
-probably future given past and current actions, not so that we will
-accept their predictions are inevitable, but rather so we will use
-them to help <i>change</i> the future." (26)
-</p>
-
-<p>
-"Cyberspace, as a reparative hallucination within a hallucination,
-enables dominant groups to dis-identify as opporessed, militant
-minorities through hopeful ignorance." (34).
-</p>
-
-<p>
-Intersectionality vs neighborhoods: the difference is intention.
+Prosser's main argument is that queer theory, and gender
+performativity in particular, has relied on transgender
+identification in ways that elide the specificity of the trans body.
+His goal is to read materiality back into the transsexual body:  
 </p>
 <ul class="org-ul">
-<li>"Cambridge Analytica perverted Crenshaw's method and sought to
-augment differences and exclusions, both real and perceived, based
-on values and 'personality traits,' within a racially homogenous
-space" (49).</li>
-<li>"'Communities' are being planned and constructed based on divisions
-and animosities" (49).</li>
+<li>"The question of how to represent the narratives of
+transsexuality&#x2026; to put into narrative its remarkable bodily
+trajectories" (4).</li>
+<li>"To bring into view the mateirality of the body" (12).</li>
 </ul>
 
 <p>
-On "potential history" (Ariella Aisha Azoulay) and critical fabulation
-(Saidiya Hartman):
+Unlike "queer" in queer theory, trans isn't about transgression, but
+about finding your way back to the materiality of the body:
 </p>
 <ul class="org-ul">
-<li>"Crucially, the potential for an antitotalitarian society lies not
-in the 'new,' which is linked to the terror of colonial progress&#x2013;to
-the emptying of worlds it renders 'new'" (79)</li>
-<li>'Potential history'&#x2026; 'rather than seeing people as historical
-'sources,' it enables us to to live with them as companions in a
-world that defies the strict separation of past, present, and
-future" (79).</li>
-<li>"although such fabulation can never find the story's voices, it
-enables us to see beyond numbers and sources" (79).</li>
-<li>"What potential might we find if we were to simply revist and
-reimagine what has been dismissed as 'training sets'?" (80).</li>
+<li>"If, for queer theory, transition is to be explored in terms of its
+deconstructive effects on the body and identity (transition as a
+symptom of the constructedness of the sex/gender system and a figure
+for the impossibility of this system's achievement of identity), I
+read transsexual narratives to consider how transition may be the
+very route to identity and bodily integrity. In transsexual accounts
+transition does not shift the subject away from the embodiment of
+sexual difference but more fully into it" (Prosser 6).</li>
+<li>"transsexual and transgendered narratives alike produce not the
+revelation of the fictionality of gender categories but the sobering
+realization of their ongoing foundational power" (Prosser 11).</li>
+<li>Queer studies has depended on the transgender, has relied on
+transgender desires (21).</li>
+<li>Transsexuality is critiqued as a "literalization/deliteralization"
+of discourse: it either reinscribes or it transgresses the
+materiality of sex (13). It either reinscribes genitals as natural
+and primary, or it shows the unimportance of genitals, "we are all
+transsexuals and there are no transsexuals" (14).
+<ul class="org-ul">
+<li>Queer Studies building on poststructural critiques, where
+"materiality figures in reference to discourse and signification"
+(13). Critics like Foucault and Lacan who analyze institutions,
+ideologies, semiotics. "Materiality is our subject, but the body
+is not our object. The body is rather our route to analyzing
+power, technology, discourse, language" (13).</li>
+</ul></li>
 </ul>
 
 <p>
-"Machine learning and predictive models as they currently exist can
-also resist reduction, but only if we treat the gaps between their
-results and our realities as spaces for political action, not errors
-to be fixed" (254).
-</p>
-
-<p>
-Correlation
+Butler's performativity is at odds with transsexuality. 
 </p>
 <ul class="org-ul">
-<li>"models not only 'discover' the effects of discrimination; they also
-automate and perpetuate them for they exploit, rather than remedy,
-inequalities" (57).</li>
+<li>gender crossing as metaphor is essential to theorizing
+performativity, but not in the actual material body of the crossing.
+<ul class="org-ul">
+<li>"<i>Gender Trouble</i> cannot account for a transsexual desire for
+sexed embodiment as <i>telos</i>" (33).</li>
+</ul></li>
+<li>"deliteralization of sex" - displaced from materiality to
+fantascized surface.
+<ul class="org-ul">
+<li>Butler misreads Freud to assume that the body is a projection from
+the ego, where in reality it is the opposite.</li>
+</ul></li>
+<li>on "Gender is Burning": according to Butler, "If Venus got her sex
+change, she would cease to be subversive" (49). This is a "critical
+perversity" (49).
+<ul class="org-ul">
+<li>What makes Venus transgressive for Butler is also what gets her
+killed; she is not killed for being a homosexual man, but for
+being an incomplete woman.</li>
+<li>"According to Butler, transgressive crossings can simultaneously
+reinscribe symbolic norms" (45). There is a "metaphorization of
+the transsexual body" (55).</li>
+</ul></li>
 </ul>
 
 <p>
-Homophily
+Figure vs ground:
 </p>
 <ul class="org-ul">
-<li>"network science reduces real-world phenomena into a series of
-'nodes' and 'edges,' which are, in turn, regenerated to reveal the
-causes of seemingly disparate behaviors, from friendships to
-financial crises. These 'discovered' relations are vast
-simplifications of vast simplifications, with each stage of network
-theory&#x2013;initial abstraction or representation, followed by
-mathematical modelling&#x2013;producing its own type of abstraction" (90-91).</li>
-<li>"tightrope between empiricism and modelling&#x2026; capture[s] data and
-dream[s] of making data capture unnecessary by creating models that
-perfectly mimic their object of study" (91).</li>
-<li>"What would happen if we treated these and other models as we do
-climate change models?&#x2026; not so we will fatalistically accept the
-future they predict, but rather so that we will do whatever is
-needed to prevent that future from occurring" (122).</li>
+<li>if you make queer the figure, and heterosexuality/normativity the
+ground, "the apparent naturalness of sex"; however, trans subjects
+aspire to be the ground, simply "to be" (32).
+<ul class="org-ul">
+<li>"there are transgendered trajectories, in particular <i>transsexual
+trajectories</i>, that aspire to that which this scheme devalues.
+Namely, there are transsexuals who seek very pointedly to be
+nonperformative, to be constative, quite simply, <i>to be</i>" (32).</li>
+</ul></li>
 </ul>
 
-<p>
-Algorithms
-</p>
-<ul class="org-ul">
-<li>"People are most predictable when they are most affectively charged" (24).</li>
-</ul>
+
 
 <p>
-Recognition
+Criticism:
 </p>
-<ul class="org-ul">
-<li>"they dis-identify as 'victims,' in order to both establish
-themselves as the 'real victims,' and to undermine the claims of
-social justice warriors" (217).</li>
-</ul>
 
 <p>
-Math concepts:
+"transsexuality's somatic transitions are spurred and enabled by the
+formal transitions of narrative&#x2026; Sex change is a plot&#x2026; [Prosser's
+book suggests transsexuality, with its extraordinary conjunctions of
+body and narrative, as an identity story that transitions across the
+body/language divide that currently stalls poststucturalist thought."
 </p>
-<ul class="org-ul">
-<li>correlation</li>
-<li>magnetic polarization</li>
-<li>principal component analysis</li>
-<li>bayes' theorem and inference</li>
-<li>linear discriminant analysis</li>
-</ul>
+
+<p>
+From Judith Halberstam's review: 
+</p>
+
+<p>
+Second Skins: The Body Narratives of Transsexuality. Jay Prosser
+Trans Liberation: Beyond Pink or Blue. Leslie Feinberg FTM:
+Female-to-Male Transsexuals in Society. Holly Devor Judith Halberstam
+<i>Signs: Journal of Women in Culture and Society</i> 2000 26:1, 313-317
+</p>
+
+<p>
+"Jay Prosser delineates three major areas for discussion: first,
+the (mis)representation of the transgender body within queer theory
+as a privileged example of gender performativity" (313).
+</p>
+
+<p>
+"In a discussion of poststructuralist treatments of the transsexual
+body, Prosser vigorously contests the notion that the body is
+simply an inscribed surface or a discursive effect; such a reading
+of the body becomes particularly problematic for the transsexual
+whose desire for a sex change suggests a return to the literal, the
+real, the intractable flesh" (314).
+</p>
+
+<p>
+"In a dense and complex chapter on the work of Judith Butler,
+Prosser argues that her texts, central as they are to queer theory,
+simultaneously invoke and repudiate the transsexual body as a
+figure for gender crossing. In Gender Trouble, Prosser argues, the
+transgender figures of the drag queen and the butch lesbian "come
+to appear the empirical subjects of gender performativity, their
+crossing illustrating both the inessentiality of sex and the
+nonoriginality of heterosexuality that was the book's thesis" (26).
+And yet, when Butler shifts her gaze from the transgender figure to
+the transsexual in <i>Bodies That Matter</i>, the transsexual represents
+a limit to performativity. Prosser claims that, while transgender
+and queer may be allied in Butler's work, transsexual and queer are
+most certainly in opposition. Prosser's reading of Butler is
+crucial to the political stakes of his book. In true deconstructive
+fashion, he aims his critical attention at Butler's mis- reading of
+a footnote in Freud about the relationship between body and ego.
+When she misreads <i>ego</i> as <i>body</i>, Prosser claims, Butler
+dematerializes the body as a fantasy/fiction of the ego while Freud
+wanted to make the body the materialization of the psyche. This
+misreading sets up a series of priorities for queer performativity
+that are all at odds with transsexuality. Accordingly, Prosser
+understands queer theory to validate surface over depth, gender
+over sex, fiction over the real, the visual over the felt, the
+queer over the heterosexual. "In its representation of sex as a
+figurative effect of straight gender's constative performance," he
+claims, "<i>Gender Trouble</i> cannot account for the transsexual desire
+for sexed embodiment <i>telos</i>" (33). I think Prosser's reading of
+Butler is compelling, and it is particularly persuasive when
+Prosser tackles the most problematic chapter in <i>Bodies That
+Matter</i>, a close reading of the limits of performativity in
+relation to the transsexual drag queens in Jennie Livingston's film
+<i>Paris is Burning</i>." (314-315)
+</p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: fcalado</p>
-<p class="date">Created: 2025-07-08 Tue 10:33</p>
+<p class="date">Created: 2025-10-01 Wed 14:18</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
