updating adho cfp

--- a/writings/notecards.html
+++ b/writings/notecards.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-01 Wed 14:18 -->
+<!-- 2025-12-01 Mon 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -200,183 +200,77 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0535f80">1. <span class="todo TODO">TODO</span> Prosser, Jay. <i>Second Skins: The Body Narratives of Trannsexuality</i>, Columbia U Press, 1998.</a></li>
+<li><a href="#org9b3df5b">1. Malatino, Hil. <i>On Being Trans And Feeling Bad</i>. University of Minnesota Press. 2022.</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org0535f80" class="outline-2">
-<h2 id="org0535f80"><span class="section-number-2">1.</span> <span class="todo TODO">TODO</span> Prosser, Jay. <i>Second Skins: The Body Narratives of Trannsexuality</i>, Columbia U Press, 1998.</h2>
+<div id="outline-container-org9b3df5b" class="outline-2">
+<h2 id="org9b3df5b"><span class="section-number-2">1.</span> Malatino, Hil. <i>On Being Trans And Feeling Bad</i>. University of Minnesota Press. 2022.</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-Prosser's main argument is that queer theory, and gender
-performativity in particular, has relied on transgender
-identification in ways that elide the specificity of the trans body.
-His goal is to read materiality back into the transsexual body:  
+Malatino's work inserts itself into the conversation about
+negativity&#x2013;what do we do with bad feelings, feelings that don't offer
+any obvious potential for politics? His answer is that we should look
+into the ways that bad feelings, what he calls <i>side effects</i> are in
+tension or exceed normative desires that would otherwise keep us stuck
+desiring the thing that the medical-juridico and social world are
+working so hard to keep out reach to all but the most privileged trans
+subjects. How do these tensions or excessive moments against
+normativity show us other possibilities for trans being and
+solidarity?
 </p>
+
 <ul class="org-ul">
-<li>"The question of how to represent the narratives of
-transsexuality&#x2026; to put into narrative its remarkable bodily
-trajectories" (4).</li>
-<li>"To bring into view the mateirality of the body" (12).</li>
+<li>"a commitment to staying with a troubling (in the sense of both
+troublemaking and troublesome) coterie of bad feelings, animated by
+the hope that such sustained tarrying with trans negativity tells us
+more about the existential impacts of transantagonism&#x2014;how it's
+managed, how it's resisted, the forms that resiliance and resistance
+take in the face of it&#x2014;than any simple celebratory or
+victimological narrative can" (7).</li>
 </ul>
 
 <p>
-Unlike "queer" in queer theory, trans isn't about transgression, but
-about finding your way back to the materiality of the body:
+Brings to the surface affects which would place trans folks within
+normative teleologies, like "fatigue", and then points out how trans
+experiences exceed these structures, "future fatigue", which creates
+anticipatory anxiety in the present moment for the future which will
+never come. 
 </p>
 <ul class="org-ul">
-<li>"If, for queer theory, transition is to be explored in terms of its
-deconstructive effects on the body and identity (transition as a
-symptom of the constructedness of the sex/gender system and a figure
-for the impossibility of this system's achievement of identity), I
-read transsexual narratives to consider how transition may be the
-very route to identity and bodily integrity. In transsexual accounts
-transition does not shift the subject away from the embodiment of
-sexual difference but more fully into it" (Prosser 6).</li>
-<li>"transsexual and transgendered narratives alike produce not the
-revelation of the fictionality of gender categories but the sobering
-realization of their ongoing foundational power" (Prosser 11).</li>
-<li>Queer studies has depended on the transgender, has relied on
-transgender desires (21).</li>
-<li>Transsexuality is critiqued as a "literalization/deliteralization"
-of discourse: it either reinscribes or it transgresses the
-materiality of sex (13). It either reinscribes genitals as natural
-and primary, or it shows the unimportance of genitals, "we are all
-transsexuals and there are no transsexuals" (14).
-<ul class="org-ul">
-<li>Queer Studies building on poststructural critiques, where
-"materiality figures in reference to discourse and signification"
-(13). Critics like Foucault and Lacan who analyze institutions,
-ideologies, semiotics. "Materiality is our subject, but the body
-is not our object. The body is rather our route to analyzing
-power, technology, discourse, language" (13).</li>
-</ul></li>
+<li>"side effects&#x2026; experiences of transition that exceed what I,
+building on the work of Raymond Williams, call 'transnormative
+structures of feeling'&#x2026;. transition narratives that rely on and
+thus reproduce hegemonic, intensively stereotypical accounts of what
+it is to 'feel like' a man or a woman, importing these accounts
+(rooted, most often, in white bourgeois gendered norms and mores)
+into trans lifeworlds where they seem to fit strangely, if at all.
+Nevertheless, each repetition of such a narrative seems to further
+entrench and intensify a set of racialized, gender-normed
+limitations that work to determine how transition becomes legible
+and coherent&#x2014;indeed, come to shape and delimit what it means to
+transition at all" (8).</li>
+<li>The notion of future fatigue is tied to an experience of waiting to
+"inhabit the body in order to be the gender that you are" (13).</li>
 </ul>
 
 <p>
-Butler's performativity is at odds with transsexuality. 
+However, these side effects do have a lot in common with normativizing
+narratives, don't they? I don't know that what trans people experience
+exceeds cis experience, but that it offers a blueprint or makes
+explicit these experiences. Future fatigue is like cruel optimism.
 </p>
 <ul class="org-ul">
-<li>gender crossing as metaphor is essential to theorizing
-performativity, but not in the actual material body of the crossing.
-<ul class="org-ul">
-<li>"<i>Gender Trouble</i> cannot account for a transsexual desire for
-sexed embodiment as <i>telos</i>" (33).</li>
-</ul></li>
-<li>"deliteralization of sex" - displaced from materiality to
-fantascized surface.
-<ul class="org-ul">
-<li>Butler misreads Freud to assume that the body is a projection from
-the ego, where in reality it is the opposite.</li>
-</ul></li>
-<li>on "Gender is Burning": according to Butler, "If Venus got her sex
-change, she would cease to be subversive" (49). This is a "critical
-perversity" (49).
-<ul class="org-ul">
-<li>What makes Venus transgressive for Butler is also what gets her
-killed; she is not killed for being a homosexual man, but for
-being an incomplete woman.</li>
-<li>"According to Butler, transgressive crossings can simultaneously
-reinscribe symbolic norms" (45). There is a "metaphorization of
-the transsexual body" (55).</li>
-</ul></li>
+<li>"Future fatigue" is like "cruel optimism"&#x2026; "what happens when
+you're worn out by your attachment to a future vision that is
+structurally foreclosed" (14).</li>
 </ul>
-
-<p>
-Figure vs ground:
-</p>
-<ul class="org-ul">
-<li>if you make queer the figure, and heterosexuality/normativity the
-ground, "the apparent naturalness of sex"; however, trans subjects
-aspire to be the ground, simply "to be" (32).
-<ul class="org-ul">
-<li>"there are transgendered trajectories, in particular <i>transsexual
-trajectories</i>, that aspire to that which this scheme devalues.
-Namely, there are transsexuals who seek very pointedly to be
-nonperformative, to be constative, quite simply, <i>to be</i>" (32).</li>
-</ul></li>
-</ul>
-
-
-
-<p>
-Criticism:
-</p>
-
-<p>
-"transsexuality's somatic transitions are spurred and enabled by the
-formal transitions of narrative&#x2026; Sex change is a plot&#x2026; [Prosser's
-book suggests transsexuality, with its extraordinary conjunctions of
-body and narrative, as an identity story that transitions across the
-body/language divide that currently stalls poststucturalist thought."
-</p>
-
-<p>
-From Judith Halberstam's review: 
-</p>
-
-<p>
-Second Skins: The Body Narratives of Transsexuality. Jay Prosser
-Trans Liberation: Beyond Pink or Blue. Leslie Feinberg FTM:
-Female-to-Male Transsexuals in Society. Holly Devor Judith Halberstam
-<i>Signs: Journal of Women in Culture and Society</i> 2000 26:1, 313-317
-</p>
-
-<p>
-"Jay Prosser delineates three major areas for discussion: first,
-the (mis)representation of the transgender body within queer theory
-as a privileged example of gender performativity" (313).
-</p>
-
-<p>
-"In a discussion of poststructuralist treatments of the transsexual
-body, Prosser vigorously contests the notion that the body is
-simply an inscribed surface or a discursive effect; such a reading
-of the body becomes particularly problematic for the transsexual
-whose desire for a sex change suggests a return to the literal, the
-real, the intractable flesh" (314).
-</p>
-
-<p>
-"In a dense and complex chapter on the work of Judith Butler,
-Prosser argues that her texts, central as they are to queer theory,
-simultaneously invoke and repudiate the transsexual body as a
-figure for gender crossing. In Gender Trouble, Prosser argues, the
-transgender figures of the drag queen and the butch lesbian "come
-to appear the empirical subjects of gender performativity, their
-crossing illustrating both the inessentiality of sex and the
-nonoriginality of heterosexuality that was the book's thesis" (26).
-And yet, when Butler shifts her gaze from the transgender figure to
-the transsexual in <i>Bodies That Matter</i>, the transsexual represents
-a limit to performativity. Prosser claims that, while transgender
-and queer may be allied in Butler's work, transsexual and queer are
-most certainly in opposition. Prosser's reading of Butler is
-crucial to the political stakes of his book. In true deconstructive
-fashion, he aims his critical attention at Butler's mis- reading of
-a footnote in Freud about the relationship between body and ego.
-When she misreads <i>ego</i> as <i>body</i>, Prosser claims, Butler
-dematerializes the body as a fantasy/fiction of the ego while Freud
-wanted to make the body the materialization of the psyche. This
-misreading sets up a series of priorities for queer performativity
-that are all at odds with transsexuality. Accordingly, Prosser
-understands queer theory to validate surface over depth, gender
-over sex, fiction over the real, the visual over the felt, the
-queer over the heterosexual. "In its representation of sex as a
-figurative effect of straight gender's constative performance," he
-claims, "<i>Gender Trouble</i> cannot account for the transsexual desire
-for sexed embodiment <i>telos</i>" (33). I think Prosser's reading of
-Butler is compelling, and it is particularly persuasive when
-Prosser tackles the most problematic chapter in <i>Bodies That
-Matter</i>, a close reading of the limits of performativity in
-relation to the transsexual drag queens in Jennie Livingston's film
-<i>Paris is Burning</i>." (314-315)
-</p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: fcalado</p>
-<p class="date">Created: 2025-10-01 Wed 14:18</p>
+<p class="date">Created: 2025-12-01 Mon 18:16</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
