adding book proposal stuff

--- a/writings/diss_workbook.html
+++ b/writings/diss_workbook.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-12-09 Tue 13:34 -->
+<!-- 2025-12-20 Sat 18:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -196,44 +196,23 @@
 </head>
 <body>
 <div id="content" class="content">
-<ul class="org-ul">
-<li>Chapter 3:
-<ul class="org-ul">
-<li>topic: text display and sex (intercourse)</li>
-<li>scope and evidence type:
-<ul class="org-ul">
-<li>Media archaeology theorizing on materiality.</li>
-<li>Black feminist theorizing on the flesh.</li>
-<li>The novel <i>Dawn</i> by Octavia Butler and the electronic literary
-work, <i>skinonskinonskin</i> by <i>Entropy8Zuper</i>.</li>
-</ul></li>
-<li>main claims:
-<ul class="org-ul">
-<li>The collision between thinking and feeling surfaces the tension
-of where is sensuality.</li>
-<li>The surface (screen layer) of computing obscures the depths of
-material processing.</li>
-<li>Across layers of display and source code, surface effects are
-unmappable, fugitive, displaced, enabling significatory
-possbilities (connectivity, intimacy) that resist technological
-constraints. The pairing down to surface enables connectivity,
-intimacy.
-<ul class="org-ul">
-<li>Materiality exists even in abstracted forms, and points to
-significatory possibilities that resist circumscription.</li>
-</ul></li>
-</ul></li>
-<li>metacommentary:
-<ul class="org-ul">
-<li>The materiality of the sign offers a way of working within
-reductive signification processes.</li>
-</ul></li>
-</ul></li>
-</ul>
+<p>
+Additionally, moving from canonical works of Queer Literature and
+Queer Theory in its early chapters to more eclectic source material,
+like science fiction and reality TV in the latter chapters, this book
+expands the repertoire of "Queer" beyond its now institutional use.
+Developing queer for the future, the book argues, involves creative
+collaboration across adjacent fields like Trans Studies, Black
+Feminist Studies, and Latinx Studies. While Queer Studies, as a field,
+is good at <i>disrupts</i> existing structures, for performativity and
+dis-identification, other fields, like Black Feminist and Trans
+Studies, offer methods <i>outside of</i> the current structure and
+imaginaries. This book argues that both approaches are necessary for
+resistance work.</p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: fcalado</p>
-<p class="date">Created: 2025-12-09 Tue 13:34</p>
+<p class="date">Created: 2025-12-20 Sat 18:51</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
